swagger for training and expert
